--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "strict": true,
     "jsx": "react",
     "jsxFactory": "h",
-    "outDir": "dist"
+    "declaration": true,
+    "sourceMap": true,
+    "outDir": "lib"
   },
-  "exclude": ["node_modules", "**/*.test.*"]
+  "exclude": ["lib", "node_modules", "**/*.test.*"]
 }
