--- a/package.json
+++ b/package.json
@@ -23,9 +23,19 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
 }
