--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "lib"
   ],
   "scripts": {
+    "build": "tsc",
+    "clean": "rimraf lib/",
+    "prepublishOnly": "npm run clean && npm run build",
     "test": "jest"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   },
