--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": ["config:base"],
   "schedule": ["every weekend"],
   "timezone": "Asia/Tokyo",
+  "labels": ["renovate"],
   "packageRules": [
     {
       "updateTypes": ["patch"],
