--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib/",
-    "prepublishOnly": "npm run clean && npm run build",
+    "postinstall": "husky install",
+    "prepublishOnly": "npm run clean && npm run build && pinst --disable",
+    "postpublish": "pinst --enable",
     "test": "jest"
   },
   "devDependencies": {
@@ -29,15 +31,11 @@
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "pinst": "2.1.4",
     "prettier": "2.2.1",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.1",
     "typescript": "4.1.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
