--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf lib/",
-    "postinstall": "husky install",
-    "prepublishOnly": "npm run clean && npm run build && pinst --disable",
-    "postpublish": "pinst --enable",
+    "prepare": "husky install",
+    "prepublishOnly": "npm run clean && npm run build",
     "test": "jest"
   },
   "devDependencies": {
