--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,22 +4,13 @@ on: [push, pull_request]
 
 jobs:
   test:
-    strategy:
-      matrix:
-        node-version: [12]
-        os: [ubuntu-18.04]
-    name: 'Test on ${{ matrix.os }} with Node v${{ matrix.node-version }}'
-    runs-on: ${{ matrix.os }}
+    name: 'Test'
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          node-version: lts/*
+          cache: 'npm'
       - run: npm ci
       - run: npm test
